TWC Lock Safe Feature
=> CoreListeners can be added to the ListenerManager
=> Listeners activation and deactivation is properly working
=> Exception display an Error popup
=> LockSafe is now a configurable feature

DONE:
*Creating feature :       DONE
*Configuration options:   DONE
*** Activation:           DONE
*** Rollback:             DONE
*Testing:                 DONE

*Refactoring ListenerManager: DONE
*** Adding CoreListlistener:  DONE
*** Adding FeatureListener:   DONE
*** Refactoring Orchestrator: DONE
*** Refactoritng IListeners : DONE

*ErrorManagement:        DONE
*** ErrorPopup added:    DONE
*** ErrorHandling:       DONE